# backend-ai-native-book

./: .env.example  .gitignore  Dockerfile  README.md  VERIFICATION.md  debug_rag.py  docker-compose.yml  pyproject.toml  requirements.txt  setup_db.py  test_chat.py  test_imports.py
.claude/: settings.local.json
app/: main.py
app/agents/: rag_agent.py  retriever.py  router.py  selected_text.py
app/api/: chat.py  health.py  ingest.py
app/config/: settings.py
app/db/: connection.py  migrations.py
app/models/: chat.py  health.py  ingest.py
app/services/: chunking.py  cohere_service.py  neon_service.py  qdrant_service.py
scripts/: ingest_book.py
tests/: conftest.py
tests/integration/: test_full_rag_flow.py  test_selected_text_flow.py
tests/unit/: test_chunking.py  test_services.py
